Rename equipment slots to match game ui

--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
                         <label>Equipment Slot</label>
                         <select id="slotType">
                             <option value="weapon">Weapon</option>
-                            <option value="armor_head">Head / Body Armor</option>
-                            <option value="hand_foot">Hands / Feet Armor</option>
-                            <option value="ear_neck">Earrings / Necklace</option>
-                            <option value="ring_brace">Ring / Bracelet / Charm</option>
+                            <option value="head">Head</option>
+                            <option value="armor">Armor</option>
+                            <option value="gauntlets">Gauntlets</option>
+                            <option value="boots">Boots</option>
+                            <option value="earrings">Earrings</option>
+                            <option value="necklace">Necklace</option>
+                            <option value="ring">Ring</option>
+                            <option value="bracelet">Bracelet</option>
+                            <option value="charm">Charm</option>
                         </select>
                     </div>
 
